<resources>
    <string name="title_activity_resume">Resume</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Parametres</string>
    <string name="title_activity_maps">trafic</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ticket">ARIV-Ticket</string>
    <string name="mobicash">Mobicash</string>
    <string name="paypal_wallet_available">wallet available</string>
    <string name="continuer_vers">Continuer vers</string>
    <string name="annuler">Annuler</string>
    <string name="filter_caption">Veuillez s\'il vout plait renseigner les champs ci-dessous afin de determiner le meilleur depart pour vous.</string>
    <string name="date_depart">Date de depart</string>
    <string name="somme_minimale">Somme Minimale</string>
    <string name="somme_maximale">Somme maximale</string>
    <string name="destination_dep">Date depart</string>
    <string name="heure_dep">Heure depart</string>
    <string name="title_activity_settings">Parametres</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_user">Compte Utilisateur</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_navigation">Navigation</string>

    <string name="pref_header_trip">Voyage</string>

    <string name="pref_header_about">A propos</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>


    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_certification">Alerts</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_user_name">Nom</string>
    <string name="pref_user_lastname">Prenom</string>
    <string name="pref_user_pnumber">Telephone</string>
    <string name="pref_user_cpnumber">Telephone ( proche )</string>
    <string name="pref_user_adress">Adresse</string>
    <string name="pref_user_disconnect">Deconnexion</string>
    <string name="notification_switch_summary">regularise la modification des alerts evenement</string>
    <string name="certification_alert">Modifications</string>
    <string name="pref_use_add">Ajout</string>
    <string name="pref_trip_shortcut">Info raccourci</string>
    <string name="copyright_text">&#169; MAPPCOM &amp; ALEYAM-SLTS tous droits reservés</string>
    <string name="paiementMethodeSumary">Methode de Paiement: \n ARIV vous permet de faire des
        achatas et des reservation de tickets de bus a l\'aide des cartes de credit, de debit, d\'un compte Paypal.</string>
    <string name="valideSumary">Consultez vos tickets valide et votre Historique de voyage, Ensuite Partager votre experience de voyage afin de permettre aux compagnies d\'ameliorer leurs services</string>
    <string name="expireSumary">Guardez un oeuil sur vos ancien deplacement et vos souvenirs</string>
    <string name="pref_header_others">Autres Preferences</string>
    <string name="ariv_summary">L\'application qui vous permet de donner des informations sur la route, d\'acheter des tickets de voyage et de garder un historique de vos déplacements</string>
    <string name="trip_presentation"><![CDATA[Selectionnez une agence ensuite un depart et enregistrez vous pour obtenir un ticket. Au cas ou vous n\'avez pas d\'idee precise sur l\'agence, faites nous confiance Nous trouverons la meilleur offre pour vous il vous suffit de renseigner les champs de l\'onglet <<Meilleurs offres>>]]></string>
</resources>
