<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

 <PreferenceCategory
     android:title="Mes Infos"
     >

  <EditTextPreference
      android:key="key_pref_user_name"
      android:inputType="text"
      android:title="@string/pref_user_name"
      android:summary=""
      />
  <EditTextPreference
      android:key="key_pref_user_lastname"
      android:inputType="text"
      android:title="@string/pref_user_lastname"
      android:summary=""
      />
  <EditTextPreference
      android:key="key_pref_user_pnumber"
      android:inputType="phone"
      android:title="@string/pref_user_pnumber"
      android:summary=""
      />
  <EditTextPreference
      android:key="key_pref_user_cpnumber"
      android:inputType="text"
      android:title="@string/pref_user_cpnumber"
      android:summary=""
      />
  <EditTextPreference
      android:key="key_pref_user_adress"
      android:inputType="text"
      android:title="@string/pref_user_adress"
      android:summary=""
      />

 </PreferenceCategory>

 <PreferenceCategory
     android:title="Autre Action"
     >
  <Preference
      android:key="key_pref_user_disconnect"
      android:title="@string/pref_user_disconnect"
      android:summary="Passer à un autre compte"
      />
 </PreferenceCategory>

</PreferenceScreen>
