<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="cg.code.aleyam.nzela_nzela.Settings.SettingsActivity$UserFragment"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/pref_header_user"
        android:summary="Vos Informations"
        />

    <header
        android:fragment="cg.code.aleyam.nzela_nzela.Settings.SettingsActivity$CertificationFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_certification"
        android:summary="gerez votre Compte public"
        />

    <header
        android:fragment="cg.code.aleyam.nzela_nzela.Settings.SettingsActivity$NavigationFragment"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/pref_header_navigation"
        android:summary="Optimisez votre Navigation"
        />
    <header
        android:fragment="cg.code.aleyam.nzela_nzela.Settings.SettingsActivity$TripFragment"
        android:icon="@drawable/ic_directions_bus_black_24dp"
        android:summary="Organisez vos preferences de Voyage"
        android:title="@string/pref_header_trip" />
    <header
        android:fragment="cg.code.aleyam.nzela_nzela.Settings.SettingsActivity$OtherFragment"
        android:icon="@drawable/ic_more_horiz_black_24dp"
        android:summary="Plus"
        android:title="@string/pref_header_others" />
    <header
        android:fragment="cg.code.aleyam.nzela_nzela.Settings.SettingsActivity$AboutFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:summary="Prennez connaissance d'ARIV et faites nous part de votre experience, vos suggestions"
        android:title="@string/pref_header_about" />


</preference-headers>
